# AgentShield

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
agentshield/: __init__.py  output_guard.py  policy.py  redactor.py  secret_scanner.py  secure_fs.py
agentshield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agentshield_api.egg-info/: PKG-INFO  SOURCES.txt
examples/: example_usage.py
policies/: default_policy.yaml
tests/: test_output_guard.py  test_policy.py  test_redactor.py  test_scanner.py  test_securefs.py
