[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.1"
description = "Secure middleware SDK for AI agents."
authors = [{name="Kristian Vazquez", email="kristian120304@gmail.com"}]
readme = "README.md"
license = {text = "Apache"}

[project.dependencies]
yaml = "*"
pytest = "*"
