[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.2"
description = "Secure middleware SDK for AI agents."
authors = [{name="Kristian Vazquez", email="kristian120304@gmail.com"}]
readme = "README.md"
license = {text = "Apache"}

dependencies = [
    "PyYAML>=5.1",
    "pytest>=7.0"
]

[tool.setuptools.packages.find]
include = ["agentshield*"]
exclude = ["policies*", "tests*"]
