[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield-api"
version = "0.1.4"
description = "Secure middleware SDK for AI agents."
authors = [{name="Kristian Vazquez", email="kristian120304@gmail.com"}]
readme = "README.md"
license = "Apache-2.0"

dependencies = [
    "PyYAML>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["agentshield*"]
exclude = ["policies*", "tests*"]
